example-configs/claim-volume.yaml
apiVersion: v1
kind: Pod
metadata:
    name: my-pod
spec:
    containers:
        -   name: my-frontend
            image: nginx
            volumeMounts:
                -   mountPath: /var/www/html
                    name: cool-volume
    volumes:
            # NAME MUST MATCH ABOVE
        -   name: cool-volume
            persistentVolumeClaim:
                # NAME MUST MATCH CLAIM NAME
                claimName: frontend-volume
