example-configs/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx-service

# SERVICE PROPS
spec:
    selector:
    
        # THIS NEEDS TO MATCH THE POD (DEPL) LABEL
        app: nginx
    ports:
        -   protocol: TCP

            # SERVICE PORT
            port: 80

            # POD PORT
            targetPort: 8080
