example-configs/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: myapp-ingress

# FORWARDING RULESET
spec:
    # TO ENABLE HTTS
    tls:
        - hosts:
            - myapp.com
                secretName: myapp-secrets-tls

    # REDIRECT RULES
    rules:
        # FROM
        -   host: myapp.com
            http:
                paths:
                    # MAIN PATH
                    - backend:
                        serviceName: myapp-internal-service
                        servicePort: 81

                    # ANALYTICS SUB CATEGORY - DOMAIN.COM/ANALYTICS
                    -   path: /analytics
                        backend:
                            serviceName: analytics-service
                            servicePort: 3000

                    # SHOPPING SUB CATEGORY - DOMAIN.COM/ANALYTICS
                    -   path: /shopping
                        backend:
                            serviceName: shopping-service
                            servicePort: 8080

        # SUBDOMAIN - ANALYTICS.DOMAIN.COM
        -   host: analytics.myapp.com
            http:
                paths:
                    # MAIN PATH
                    - backend:
                        serviceName: myapp-internal-service
                        servicePort: 81
---
apiVersion: v1
kind: Service
metadata:
    name: myapp-internal-service
spec:
    selector:
        app: myapp
    ports:
        -   protocol: TCP

            # SERVICE PORT
            port: 81

            # POD PORT
            targetPort: 8080
